add cp detail
