# docs/swagger.json
@@ -101,6 +101,104 @@
                 }
             }
         },
+        "/cp/{join_code}": {
+            "get": {
+                "description": "Get CP details by join code",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CP"
+                ],
+                "summary": "Get CP Details",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Join Code",
+                        "name": "join_code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.CpDetailDto"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid join code",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "CP details not found",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/helper.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/dashboard/events/{id_user}": {
             "get": {
                 "description": "Retrieve all events associated with a specific user.",
@@ -460,7 +558,7 @@
                 }
             }
         },
-        "/hackathon/{join_code}/{stage}": {
+        "/hackathon/{stage}/{join_code}": {
             "post": {
                 "description": "Submit a hackathon entry",
                 "consumes": [
@@ -1140,6 +1238,23 @@
                 },
                 "user": {
                     "$ref": "#/definitions/dto.UserResponseDTO"
+                }
+            }
+        },
+        "dto.CpDetailDto": {
+            "type": "object",
+            "properties": {
+                "domjudgePassword": {
+                    "type": "string"
+                },
+                "domjudgeUsername": {
+                    "type": "string"
+                },
+                "stage": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
                 }
             }
         },
