# dto/cp-dto.go
@@ -1,0 +1,8 @@
+package dto
+
+type CpDetailDto struct {
+	Stage            string `gorm:"varchar(255); not null"`
+	Status           string `gorm:"varchar(255); not null"`
+	DomjudgeUsername string `gorm:"varchar(255); not null"`
+	DomjudgePassword string `gorm:"varchar(255); not null"`
+}
